@@ -36,6 +36,10 @@ Version 1.5.7+svn:
    * deprecated tag [debug_message]; use [wml_message] instead, which
      now offers the debug/dbg logger and uses the "wml" log domain
      (i.e. --log-*=wml should be used instead of --log-*=notifs).
+   * The text output created by [wml_message] to stderr is echoed in-game
+     using the chat user interface like [deprecated_message] and other
+     Invalid-WML messages; the level of verbosity is controlled by the log
+     level for the "wml" log domain.
    * the animate_unit action can now animate multiple units
    * the animate_unit action can now change the direction the unit is facing
      with a SLF
